[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
locust = "^1.4.1"
tox = "^3.20.1"
hypothesis = "^5.41.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scanapi = "^2.1.0"
ipdb = "^0.13.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
